- fix landing page link alignment - add federation details text to home page
git-svn-id: https://svn.java.net/svn/opensso~svn/trunk@7536 b2119f5d-607e-cfcf-c5d3-9fa3ed8061d4

--- a/extensions/entitlements/web/admin/css/admin.css
+++ b/extensions/entitlements/web/admin/css/admin.css
@@ -22,7 +22,7 @@
 * your own identifying information:
 * "Portions Copyrighted [year] [name of copyright owner]"
 *
-* $Id: admin.css,v 1.102 2009-07-27 19:35:26 farble1670 Exp $
+* $Id: admin.css,v 1.103 2009-07-27 20:33:26 farble1670 Exp $
 *
 */
 
@@ -278,12 +278,12 @@ span.button img.left {
 .command-link img {
     vertical-align: middle;
     padding-bottom: 2px;
+    padding-right: 2px;
 }
 
 .command-link span {
     font-weight: bold;
     color: #005480;
-    margin-left: 2px;
 }
 
 .command-link:hover span {
